testdata/baselines/reference/compiler/jsxLibraryManagedAttributesUnexpectedType.errors.txt
jsxLibraryManagedAttributesUnexpectedType.tsx(7,12): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== jsxLibraryManagedAttributesUnexpectedType.tsx (1 errors) ====
    declare namespace JSX {
      enum LibraryManagedAttributes {}
    }
    
    declare const C: () => any;
    
    const x = <C />;
               ~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    